<resources>
    <string name="app_name">AESTEC</string>

    <!-- Strings related to login -->

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (Mandatory)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
        <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign up</string>
    <string name="prompt_name">Name</string>


    <!-- Strings related to REgister -->
    <string name="repeat_email">Repeat email</string>
    <string name="user">Username</string>
    <string name="password">Password</string>
    <string name="c_password">Confirm Password</string>
    <string name="mismatch_password">Password doesnot coincide</string>
    <string name="mismatch_email">Emails doesnot coincide</string>
    <string name="user_exists">Account with same username exists already</string>


    <string name="prompt_emailexist">User with this email already exists</string>
    <string name="forgetpass">Problem Login</string>

    <string name="action_sign_up">Register</string>
    <string name="title_activity_aestec">Aestec</string>
    <string name="title_activity_aestec_activity">Aestec_activity</string>
    <string name="title_activity_event_list">EventListActivity</string>


</resources>
